--- a/reviews/templates/reviews/review.html
+++ b/reviews/templates/reviews/review.html
@@ -10,7 +10,8 @@
     {% comment %} the method attribute's default is GET 
     POST request unlike a GET request can carry data.
     {% endcomment %}
-    <form method="POST">
+    {% comment %} action attribute allows us to specify the path after our domain {% endcomment %}
+    <form action="/" method="POST">
     {% comment %} Django will generate unique token and add it in the form,
     and validate the token once our POST request arrives back on the server.{% endcomment %}
     {% csrf_token %}
