--- a/reviews/templates/reviews/review.html
+++ b/reviews/templates/reviews/review.html
@@ -15,7 +15,13 @@
     {% comment %} Django will generate unique token and add it in the form,
     and validate the token once our POST request arrives back on the server.{% endcomment %}
     {% csrf_token %}
-    {{ form }}
+    {% comment %} if form.user_name.errors is True return the errors class {% endcomment %}
+    <div class="form-control {% if form.user_name.errors %}errors{% endif %}">
+    {% comment %} put error messages below {% endcomment %}
+    {{ form.user_name.label_tag }}
+    {{ form.user_name }}
+    {{ form.user_name.errors }}
+    </div>
     <button type="submmit">Send</button>
     </form>
 </body>
