--- a/reviews/templates/reviews/single_review.html
+++ b/reviews/templates/reviews/single_review.html
@@ -3,7 +3,7 @@
 {% block title %}Review Detail{% endblock title %}
 
 {% block content %}
-    <h1>{{ review.user_name }}</h1>
+    <h1>{{ object.user_name }}</h1>
     <p>Rating: {{review.rating}}</p>
     <p>{{ review.review_text }}</p>
 {% endblock content %}
