164 make the file upload work

--- a/profiles/templates/profiles/create_profile.html
+++ b/profiles/templates/profiles/create_profile.html
@@ -9,8 +9,11 @@
   <link rel="stylesheet" href="{% static "profiles/styles.css" %}">
 </head>
 <body>
-  <form>
-    <input type="file" />
+  <form action="/profiles/" method="POST" enctype="multipart/form-data">
+    {% comment %} enctype tells browser when the form submitted will contain a file -  {% endcomment %}
+    {% comment %} - and will change how the request is sent to the server{% endcomment %}
+    {% csrf_token %}
+    <input type="file" name="image"/>
     <button>Upload!</button>
   </form>
 </body>
