--- a/reviews/templates/reviews/single_review.html
+++ b/reviews/templates/reviews/single_review.html
@@ -6,5 +6,10 @@
     <h1>{{ object.user_name }}</h1>
     <p>Rating: {{review.rating}}</p>
     <p>{{ review.review_text }}</p>
-    <button>Favorite</button>
+    {% comment %} with form we can send request automatically {% endcomment %}
+    <form action="/reviews/faviorite" method="POST">
+        {% comment %} hidden is a input which the user can't edit {% endcomment %}
+        <input type="hidden" name="reivew_id" value="{{ review.id }}">
+        <button>Favorite</button>
+    </form>
 {% endblock content %}
