--- a/reviews/templates/reviews/single_review.html
+++ b/reviews/templates/reviews/single_review.html
@@ -6,12 +6,15 @@
     <h1>{{ object.user_name }}</h1>
     <p>Rating: {{review.rating}}</p>
     <p>{{ review.review_text }}</p>
-    {% comment %} with form we can send request automatically {% endcomment %}
-    <form action="/reviews/favorite" method="POST">
-        {% comment %} if form is submitted we have to ensure the CSRF token is included {% endcomment %}
-        {% csrf_token %}
-        {% comment %} hidden is a input which the user can't edit {% endcomment %}
-        <input type="hidden" name="reivew_id" value="{{ review.id }}">
-        <button>Favorite</button>
-    </form>
+    {% if is_favorite %}
+        <p>This is my favorite</p>
+    {% else %}
+        <form action="/reviews/favorite" method="POST">
+            {% comment %} if form is submitted we have to ensure the CSRF token is included {% endcomment %}
+            {% csrf_token %}
+            {% comment %} hidden is a input which the user can't edit {% endcomment %}
+            <input type="hidden" name="reivew_id" value="{{ review.id }}">
+            <button>Favorite</button>
+        </form>
+    {% endif %}
 {% endblock content %}
